# string_enum

./: .gitignore  CMakeLists.txt  README.md  count_args.hpp.in  generate_constants.hpp.in  generate_strings.hpp.in  get_nth_arg.hpp.in  main.cpp  string_enum.hpp  tests.cpp
cmake/: generate_constants.cmake
internal/: CMakeLists.txt  count_args.hpp.in  generate_constants.hpp.in  generate_strings.hpp.in
internal/tests/: CMakeLists.txt  count_args_tests.cpp
string_enum/: CMakeLists.txt  string_enum.hpp
string_enum/internal/: CMakeLists.txt  count_args.hpp.in  generate_constants.hpp.in  generate_strings.hpp.in  inner_enum_class.hpp  inner_string_array.hpp  names.hpp
string_enum/internal/cmake/: generate_count_args.cmake  generate_nth_arg.cmake  generate_strings.cmake
string_enum/internal/tests/: CMakeLists.txt  inner_enum_class_tests.cpp  inner_string_array_tests.cpp  names_tests.cpp
tests/: CMakeLists.txt  string_enum_tests.cpp
